--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using EUCookies;
+
+@{
     ViewBag.Title = "Confirm password reset";
     Layout = null;
 }
@@ -14,6 +16,7 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="~/Content/style.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/cookies_eu.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -39,5 +42,10 @@
 
         </div>
     </div>
+    @Html.Raw(Consent.Instance.Install())
+
+    <!-- cookies message -->
+    <script src="~/Scripts/jquery.cookie.js"></script>
+    <script src="~/Scripts/cookies_eu.js"></script>
 </body>
 </html>
