--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
@@ -321,14 +321,44 @@
             addRemoveLinks: true,
             headers: { "__RequestVerificationToken": token },
             success: function (file, response) {
-                var imgName = response;
-                file.previewElement.classList.add("dz-success");
-                //console.log("Successfully uploaded :" + imgName);
 
-                // Remove the file preview.
-                //wrapperThis.removeFile(file);
+                if (response.status == true) {
+                    file.previewElement.classList.add("dz-success");
+                    // Remove the file preview.
+                    this.removeFile(file);
+                }
+                else {
+                    // se file esiste
+                    if (response.filePath != null) {
+                        //Warning Message
+                        swal({
+                            title: "There is a file, do you want to delete it?",
+                            text: "File name: " + file.name,
+                            type: "warning",
+                            showCancelButton: true,
+                            confirmButtonClass: 'btn-warning',
+                            confirmButtonText: "Yes, delete it!",
+                            closeOnConfirm: false
+                        }, function () {
 
-                //this.uploadFile(file);
+                            // invio richiesta per cancellare il file
+                            $.post('/Source/DeleteFile', { filePath: response.filePath + "/" + file.name  }).then(res => {
+                                // risultato della risposta
+                                if (res == true) {
+                                    // invio di nuovo la richiesta
+                                    this.uploadFile(file);
+                                } else {
+                                    swal("An error has occurred!", "Please wait a few minutes and try again.", "error");
+                                }
+                            });
+
+                        });
+                        return;
+                    }
+
+                    file.previewElement.classList.add("dz-error");
+                    $(file.previewElement).addClass("dz-error").find('.dz-error-message').text(response.response);
+                }
             },
             error: function (file, errorMessage, xhr) {
 
@@ -349,7 +379,6 @@
 
             init: function () {
                 this.on("addedfile", function (file) {
-
                     // prevent duplicate
                     if (this.files.length) {
                         var _i, _len;
@@ -361,8 +390,6 @@
                         }
                     }
 
-                    // Remove the file preview.
-                    //wrapperThis.removeFile(file);
                 });
 
                 this.on("removedfile", function (file) {
