--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Content/style.css
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Content/style.css
@@ -4508,6 +4508,9 @@ select.form-control + .chosen-container-multi .chosen-results li.result-selected
 #idSortable5:hover {
     cursor: pointer
 }
+#idSortable6:hover {
+    cursor: pointer
+}
 
 /* immagine loading */
 #centerLoading {
