--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/Error.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/Error.cshtml
@@ -13,9 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/font-awesome.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/css")
 </head>
 
 <body>
