--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/ResetPasswordConfirmation.cshtml
@@ -13,10 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/font-awesome.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/style.css" rel="stylesheet" type="text/css">
-    <link href="~/Content/cookies_eu.css" rel="stylesheet" type="text/css">
+    <link href='//fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|Roboto:500|Crete+Round:400i' rel='stylesheet' type='text/css' />
+    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/cookies")
 </head>
 
 <body>
@@ -45,7 +44,6 @@
     @Html.Raw(Consent.Instance.Install())
 
     <!-- cookies message -->
-    <script src="~/Scripts/jquery.cookie.js"></script>
-    <script src="~/Scripts/cookies_eu.js"></script>
+    @Scripts.Render("~/Scripts/cookies")
 </body>
 </html>
