--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Manage/ChangePassword.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Manage/ChangePassword.cshtml
@@ -14,7 +14,7 @@
         @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            
+
             <div class="form-group">
                 <label class="col-md-2 control-label">Current Password</label>
                 <div class="col-md-10">
@@ -63,7 +63,7 @@
 </div>
 
 @section Scripts {
-    <script src="~/Scripts/plugins/parsleyjs/parsley.min.js"></script>
+    @Scripts.Render("~/Scripts/parsley")
 
     <script>
         //has uppercase
