--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Admin/Grant.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Admin/Grant.cshtml
@@ -25,7 +25,7 @@
 
 @section styles {
     <!-- Sweet Alert -->
-    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/sweetalert")
 }
 
 <div class="col-lg-12">
@@ -89,10 +89,11 @@
 </div>
 
 @section scripts {
-    <script src="~/Scripts/pagination.js"></script>
+    <!-- Pagination  -->
+    @Scripts.Render("~/Scripts/pagination")
 
     <!-- Sweet-Alert  -->
-    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/sweetalert")
 
     <script>
         // ValidateAntiForgeryTokenOnAllPosts
