--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Country/Index.cshtml
@@ -44,10 +44,10 @@
 
 @section styles {
     <!-- Plugin -->
-    <link href="~/Scripts/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/colorpicker")
 
     <!-- Sweet Alert -->
-    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/sweetalert")
 
     <!-- Chosen -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chosen/1.1.0/chosen.css">
@@ -352,17 +352,17 @@
 
 @section scripts {
     <!-- Pagination  -->
-    <script src="~/Scripts/pagination.js"></script>
+    @Scripts.Render("~/Scripts/pagination")
 
     <!-- Chosen  -->
     <script src="//cdn.jsdelivr.net/chosen/1.1.0/chosen.jquery.js"></script>
 
     <!-- Plugins js -->
-    <script src="~/Scripts/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/plugins/bootstrap-maxlength/bootstrap-maxlength.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/colorpicker")
+    @Scripts.Render("~/Scripts/maxlength")
 
     <!-- Sweet-Alert  -->
-    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/sweetalert")
 
     <script>
         var boolAdmin = '@User.IsInRole("Admin")';
@@ -527,7 +527,7 @@
 
         // invia richiesta Ajax per salvare un rows cambiato
         function saveAjaxRequest(countryCode, countryName, regionName, continentName, pmiCoding, areaCode, id) {
-            
+
             $.ajax({
                 type: "POST",
                 dataType: 'json',
@@ -957,7 +957,7 @@
                         document.getElementById("idSortable2").src = "/Images/Sortable/bg.png";
                         document.getElementById("idSortable3").src = "/Images/Sortable/bg.png";
                         document.getElementById("idSortable4").src = "/Images/Sortable/bg.png";
-                    } 
+                    }
                     // passo al tab dei row
                     $("#collapseOne").prop('class', 'panel-collapse collapse');
                     $("#collapseTwo").prop('class', 'panel-collapse collapse in');
