--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Excel/Export.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Excel/Export.cshtml
@@ -19,13 +19,12 @@
 }
 
 @section styles {
-    <link href="~/Scripts/plugins/datatables/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Scripts/plugins/datatables/select.bootstrap.min.css" rel="stylesheet" type="text/css">
+    <!-- Datatables -->
+    @Styles.Render("~/Content/datatables")
     <link href="//cdn.datatables.net/buttons/1.5.6/css/buttons.bootstrap4.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Scripts/plugins/datatables/dataTables.bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Sweet Alert -->
-    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/sweetalert")
 }
 
 <div class="row">
@@ -287,14 +286,14 @@
 
 @section scripts {
     <!-- Datatable -->
-    <script src="~/Scripts/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src=//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js></script>
     <script src="//cdn.datatables.net/select/1.3.0/js/dataTables.select.min.js"></script>
     <script src="//cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
-    <script src="~/Scripts/plugins/datatables/dataTables.bootstrap.js"></script>
+    <script src="//cdn.datatables.net/1.10.19/js/dataTables.bootstrap.js"></script>
     <script src="//cdn.datatables.net/buttons/1.5.6/js/buttons.bootstrap4.min.js"></script>
 
     <!-- Sweet-Alert  -->
-    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/sweetalert")
 
     <script>
         // nascondo immagine
