--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Home/Index.cshtml
@@ -13,10 +13,10 @@
 
 @section styles {
     <!-- Sweet Alert -->
-    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/sweetalert")
 
     <!-- jvectormap -->
-    <link href="~/Scripts/plugins/jvectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet">
+    @Styles.Render("~/Content/jvectormap")
 }
 
 <div class="row">
@@ -47,10 +47,7 @@
 
 @section scripts {
     <!-- Sweet-Alert  -->
-    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/sweetalert")
 
-    <script src="~/Scripts/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
-    <script src="~/Scripts/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-    <script src="~/Scripts/plugins/jvectormap/gdp-data.js"></script>
-    <script src="~/Scripts/plugins/jvectormap/jvectormap.init.js"></script>
+    @Scripts.Render("~/Scripts/jvectormap")
 }
