--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Manage/ChangePhoto.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Manage/ChangePhoto.cshtml
@@ -34,5 +34,5 @@
 
 @section Scripts {
     <!-- Bootstrap File Style -->
-    <script src="~/Scripts/plugins/bootstrap-filestyle/js/bootstrap-filestyle.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/filestyle")
 }
