--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Source/Index.cshtml
@@ -43,16 +43,16 @@
 
 @section styles {
     <!-- Plugin -->
-    <link href="~/Scripts/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/colorpicker")
 
     <!-- Sweet Alert -->
-    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/sweetalert")
 
     <!-- Chosen -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chosen/1.1.0/chosen.css">
 
     <!-- Dropzone css -->
-    <link href="~/Scripts/plugins/dropzone/dist/dropzone.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/dropzone")
 }
 
 <div class="panel-group panel-group-joined" id="accordion-region">
@@ -286,14 +286,17 @@
 </div>
 
 @section scripts {
+    <!-- Pagination  -->
+    @Scripts.Render("~/Scripts/pagination")
+
     <!-- Chosen  -->
     <script src="//cdn.jsdelivr.net/chosen/1.1.0/chosen.jquery.js"></script>
 
-    <!-- Dropzone js -->
-    <script src="~/Scripts/plugins/dropzone/dist/dropzone.js"></script>
-
     <!-- Sweet-Alert  -->
-    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/sweetalert")
+
+    <!-- Dropzone js -->
+    @Scripts.Render("~/Scripts/dropzone")
 
     <script>
         var boolAdmin = '@User.IsInRole("Admin")';
@@ -395,7 +398,7 @@
                 this.on("removedfile", function (file) {
                     // Only files that have been programmatically added should
                     // have a url property.
-                    
+
                 });
 
             },
