--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Value/Index.cshtml
@@ -56,10 +56,10 @@
 
 @section styles {
     <!-- Plugin -->
-    <link href="~/Scripts/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/colorpicker")
 
     <!-- Sweet Alert -->
-    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/sweetalert")
 
     <!-- Chosen -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chosen/1.1.0/chosen.css">
@@ -385,20 +385,20 @@
 
 @section scripts {
     <!-- Pagination  -->
-    <script src="~/Scripts/pagination.js"></script>
+    @Scripts.Render("~/Scripts/pagination")
 
     <!-- Chosen  -->
     <script src="//cdn.jsdelivr.net/chosen/1.1.0/chosen.jquery.js"></script>
 
     <!-- Plugins js -->
-    <script src="~/Scripts/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/plugins/bootstrap-maxlength/bootstrap-maxlength.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/colorpicker")
+    @Scripts.Render("~/Scripts/maxlength")
 
     <!-- Sweet-Alert  -->
-    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/sweetalert")
 
     <!-- Bootstrap File Style -->
-    <script src="~/Scripts/plugins/bootstrap-filestyle/js/bootstrap-filestyle.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/filestyle")
 
     <script>
         var boolAdmin = '@User.IsInRole("Admin")';
