--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
@@ -41,10 +41,10 @@
 
 @section styles {
     <!-- Plugin -->
-    <link href="~/Scripts/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/colorpicker")
 
     <!-- Sweet Alert -->
-    <link href="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/sweetalert")
 
     <!-- Chosen -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chosen/1.1.0/chosen.css">
@@ -314,17 +314,17 @@
 
 @section scripts {
     <!-- Pagination  -->
-    <script src="~/Scripts/pagination.js"></script>
+    @Scripts.Render("~/Scripts/pagination")
 
     <!-- Chosen  -->
     <script src="//cdn.jsdelivr.net/chosen/1.1.0/chosen.jquery.js"></script>
 
     <!-- Plugins js -->
-    <script src="~/Scripts/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/plugins/bootstrap-maxlength/bootstrap-maxlength.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/colorpicker")
+    @Scripts.Render("~/Scripts/maxlength")
 
     <!-- Sweet-Alert  -->
-    <script src="~/Scripts/plugins/bootstrap-sweetalert/sweet-alert.min.js" type="text/javascript"></script>
+    @Scripts.Render("~/Scripts/sweetalert")
 
     <script>
         var boolAdmin = '@User.IsInRole("Admin")';
@@ -698,7 +698,7 @@
                         if ($("#measurementUnitString").val() == null)
                             if (measurementUnitNameArray.includes(row.MeasurementUnitName) == false)
                                 measurementUnitNameArray.push(row.MeasurementUnitName);
-                                
+
                     });
 
                     // ordino array
